# CV_Auric

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md
src/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .TargetProcessor.cpp.swp  AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  Target.cpp  Target.hpp  TargetDetector.cpp  TargetDetector.hpp  TargetProcessor.cpp  TargetProcessor.hpp  VideoDevice.cpp  main.cpp
